--- a/src/app/shared/components/material-shared-text-column/material-shared-text-column.component.html
+++ b/src/app/shared/components/material-shared-text-column/material-shared-text-column.component.html
@@ -2,7 +2,7 @@
     <th mat-header-cell *matHeaderCellDef [ngClass]="headerClass"
     >{{columnLabel}}</th>
     <td mat-cell *matCellDef="let element" [ngClass]="dataClass"
-    >{{element[name]}}</td>
+    >{{element.model[name]}}</td>
     <!--The element represents the hole column dataSource and the name
         targest the specific column. -->
 </ng-container>
