--- a/src/app/shared/components/page-frame-sidenav/page-frame-sidenav.component.html
+++ b/src/app/shared/components/page-frame-sidenav/page-frame-sidenav.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="toolbar">
-    <div class="naviagation_routes">
+    <div class="navigation_routes">
         <!-- The class below is applied when routerLink match the value -->
-        <!-- It targets the routerLink in a tag -->
+        <!-- It targets the routerLink in anchor tag -->
         <div routerLinkActive="navigation_active" *ngFor="let tab of tabs">
             <!-- That routerLink is responsable just for PageFrameSidenavComponent
                 children array!! -->
