--- a/src/app/shared/components/page-frame/page-frame.component.html
+++ b/src/app/shared/components/page-frame/page-frame.component.html
@@ -13,7 +13,7 @@
     <!-- The (Tab) background of the drawer -->
     <mat-drawer-content>
         <mat-toolbar class="toolbar">
-            <div class="naviagation_routes">
+            <div class="navigation_routes">
                 <!-- The class below is applied when routerLink match the value -->
                 <!-- It targets the routerLink in a tag -->
                 <div routerLinkActive="navigation_active" *ngFor="let tab of pageConfiguration.tabs">
