--- a/src/app/shared/components/page-frame/page-frame.component.scss
+++ b/src/app/shared/components/page-frame/page-frame.component.scss
@@ -11,7 +11,7 @@ app-page-frame {
         align-items: flex-start !important;
     }
     
-    .naviagation_routes {
+    .navigation_routes {
         border: 1px solid black;
         height: 32px;
         border-radius: 10%;
