--- a/src/app/main-pages/cars/sidenavs/sidenav-regards-cars/sidenav-regards-cars.component.html
+++ b/src/app/main-pages/cars/sidenavs/sidenav-regards-cars/sidenav-regards-cars.component.html
@@ -128,7 +128,11 @@
     <div class="page-row">
       <p class="col-span-1">Birth Date:</p>
       <div class="birth_date-form-field">
-        <p>TODO: DATEPICKER</p>
+        <datetime-picker
+          [datetime]="sDrivers.controls['birth_date'].value"
+          placeholder="mm/dd/yy hh:mm"
+          dateFormat="MM/dd/yyyy"
+        ></datetime-picker>
       </div>
     </div>
     <div class="page-row">
