--- a/src/app/shared/components/page-frame-sidenav/page-frame-sidenav.component.scss
+++ b/src/app/shared/components/page-frame-sidenav/page-frame-sidenav.component.scss
@@ -5,7 +5,8 @@ app-page-frame-sidenav {
 
     .sidenav_toolbar {
         background-color: #424242;
-        margin-left: 11px !important;
+        margin: 0 !important;
+        padding: 10px 16px 0 16px;
     }
 
     .sidenav-active_tab {
