--- a/src/app/shared/components/page-frame/page-frame.component.html
+++ b/src/app/shared/components/page-frame/page-frame.component.html
@@ -1,3 +1,4 @@
+<app-sidenav-component></app-sidenav-component>
 <!-- The drawer wrapper -->
 <mat-drawer-container class="drawer-wrapper" (backdropClick)="onBackdropClicked()">
     <!-- The drawer content -->
