Adding new features to Auth.

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -29,9 +29,7 @@
             color="primary"
             class="sign_in-button w-full"
             [disabled]="!authForm.valid"
-          >
-            Sign In
-          </button>
+          > Sign In </button>
         </div>
       </div>
     </div>
