--- a/src/app/main-pages/queue/sidenavs/sidenav-drivers-regard/sidenav-drivers-regard.component.html
+++ b/src/app/main-pages/queue/sidenavs/sidenav-drivers-regard/sidenav-drivers-regard.component.html
@@ -2,27 +2,27 @@
     [sharedDataSource]="dataSource"
 >
     <material-shared-text-column
-        [name]="'driver_code'"
+        name="'driver_code'"
         columnLabel="Driver Code"
     ></material-shared-text-column>
     <material-shared-text-column
-        [name]="'availability'"
+        name="'availability'"
         columnLabel="Availability"
     ></material-shared-text-column>
     <material-shared-text-column
-        [name]="'miles'"
+        name="'miles'"
         columnLabel="Miles"
     ></material-shared-text-column>
     <material-shared-text-column
-        [name]="'target'"
+        name="'target'"
         columnLabel="Target"
     ></material-shared-text-column>
     <material-shared-text-column
-        [name]="'notes'"
+        name="'notes'"
         columnLabel="Notes"
     ></material-shared-text-column>
     <material-shared-text-column
-        [name]="'earnings'"
+        name="'earnings'"
         columnLabel="Earnings"
     ></material-shared-text-column>
 </material-shared-table>
