--- a/src/app/shared/components/material-table-components/material-shared-text-column/material-shared-text-column.component.html
+++ b/src/app/shared/components/material-table-components/material-shared-text-column/material-shared-text-column.component.html
@@ -3,6 +3,6 @@
     >{{columnLabel}}</th>
     <td mat-cell *matCellDef="let element" [ngClass]="dataClass"
     >{{element.model[name]}}</td>
-    <!--The element represents the hole column dataSource and the name
+    <!--The element represents the hole row dataSource and the name
         targest the specific column. -->
 </ng-container>
